--- a/index.html
+++ b/index.html
@@ -1,6 +1,101 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
+	<head>
+		<title>LaL872k - Github</title>
+		<meta charset="UTF-8"/>
+		<meta name="description" content="LaL872k's Webpage"/>
+		<meta name="keywords" content="LaL872k, github"/>
+		<meta name="author" content="L. Arthur Lewis">
+		<style>
+			div.container {
+				width: 100%;
+				border: 1px solid gray;
+			}
+
+			header, footer {
+				padding: 1em;
+				color: gold;
+				background-color: gray;
+				clear: left;
+				text-align: center;
+			}
+
+			nav {
+				float: left;
+				max-width: 160px;
+				margin: 0;
+				padding: 1em;
+			}
+
+			nav ul {
+				padding-left: 10px;
+				padding-down: 0;
+				padding-up: 0;
+				list-style-type: none;
+			}
+			   
+			nav ul a {
+				text-decoration: none;
+			}
+
+			article {
+				margin-left: 170px;
+				border-left: 1px solid gray;
+				padding: 1em;
+				overflow: hidden;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+
+			<header>
+			   <h1>Arthur Lewis</h1>
+			</header>
+			  
+			<nav>
+			  <ul>
+				<li><a href="#project">Projects</a>
+					<ul>
+						<li><a href="#project-pbib">PBib</a></li>
+						<li><a href="#project-console">Console</a></li>
+					</ul>
+				</li>
+				<li><a href="#oa">Accounts</a>
+					<ul>
+						<li><a href="#account-so">Stack Overflow</a></li>
+						<li><a href="#account-github">Github</a></li>
+					</ul>
+				</li>
+			  </ul>
+			</nav>
+
+			<article>
+				<div class="section" id="project">
+					<h2>Projects</h2>
+					<div class="projects" id="project-pbib">
+						<h4>PBib - <a href="https://github.com/LaL872k/PBib">View Project</a></h4>
+					</div>
+					<div class="projects" id="project-console">
+						<h4>Console - <a href="https://github.com/LaL872k/Console">View Project</a></h4>
+					</div>
+				</div>
+				<div class="section" id="oa">
+					<h2>Projects</h2>
+					<div class="accounts" id="account-so">
+						<h4>Stack Overflow</h4>
+						<a href="http://stackexchange.com/users/8532435">
+							<img src="http://stackexchange.com/users/flair/8532435.png" width="208" height="58" alt="profile for Arthur on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Arthur on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+						</a>
+					</div>
+					<div class="accounts" id="account-github">
+						<h4>Github - <a href="https://github.com/LaL872k">View Account</a></h4>
+					</div>
+				</div>
+			</article>
+
+			<footer></footer>
+
+		</div>
+	</body>
 </html>
