--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 				<div class="section" id="oa">
-					<h2>Projects</h2>
+					<h2>Other Accounts</h2>
 					<div class="accounts" id="account-so">
 						<h4>Stack Overflow</h4>
 						<a href="http://stackexchange.com/users/8532435">
